feat: add translations for Bonuses & Commissions page
- Add missing translation keys to bonuses section in en.json, es.json, fr.json
- Translate page title, description, tabs, buttons, and messages
- Update BonusesCommissions.jsx to use translation keys instead of hardcoded English strings
- Page now fully supports English, Spanish, and French

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -604,6 +604,14 @@
   },
   "bonuses": {
     "title": "Bonuses & Commissions",
+    "description": "Manage performance-based compensation and sales commissions",
+    "uploadCommissionData": "Upload Commission Data",
+    "excelImport": "Excel Import",
+    "analytics": "Analytics",
+    "noCommissionDataAvailable": "No commission data available",
+    "importExcelDataToSeeAnalytics": "Import Excel data to see analytics",
+    "commissionAnalytics": "Commission Analytics",
+    "loadingAnalytics": "Loading analytics...",
     "bonuses": "Bonuses",
     "commissions": "Commissions",
     "total": "Total",
