--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -527,6 +527,14 @@
   },
   "bonuses": {
     "title": "Bonificaciones y Comisiones",
+    "description": "Gestionar compensación basada en desempeño y comisiones de ventas",
+    "uploadCommissionData": "Subir Datos de Comisiones",
+    "excelImport": "Importar Excel",
+    "analytics": "Analíticas",
+    "noCommissionDataAvailable": "No hay datos de comisiones disponibles",
+    "importExcelDataToSeeAnalytics": "Importe datos de Excel para ver analíticas",
+    "commissionAnalytics": "Analíticas de Comisiones",
+    "loadingAnalytics": "Cargando analíticas...",
     "bonuses": "Bonificaciones",
     "commissions": "Comisiones",
     "total": "Total",
