--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -527,6 +527,14 @@
   },
   "bonuses": {
     "title": "Primes et Commissions",
+    "description": "Gérer la rémunération basée sur la performance et les commissions de vente",
+    "uploadCommissionData": "Télécharger les Données de Commission",
+    "excelImport": "Importer Excel",
+    "analytics": "Analytiques",
+    "noCommissionDataAvailable": "Aucune donnée de commission disponible",
+    "importExcelDataToSeeAnalytics": "Importez des données Excel pour voir les analytiques",
+    "commissionAnalytics": "Analytiques de Commission",
+    "loadingAnalytics": "Chargement des analytiques...",
     "bonuses": "Primes",
     "commissions": "Commissions",
     "total": "Total",
