fix: add missing translation keys and fix hardcoded strings
- Add missing leave.balances keys (noDataTitle, noDataDescription, breakdown, vacationDaysPerYear, etc.) to all language files
- Add compliance translation keys (generateAlerts, noActiveAlerts) to all language files
- Fix LeaveManagement.jsx to use leave.calendar.clickToSee instead of clickDayPrompt
- Replace hardcoded strings in LeaveManagement.jsx with translation keys
- Fix TimeTracking DayView function to accept t parameter
- Update Benefits.jsx to use translation for enrollEmployee button
- Replace hardcoded strings in Compliance.jsx with translation keys
- Fix Dashboard.jsx timeRange translation - remove toLowerCase() from translated text

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -217,12 +217,18 @@
       "used": "Used",
       "noLeaveDataAvailable": "No Leave Data Available",
       "leaveBalancesWillAppear": "Leave balances will appear here once employees start using the system.",
+      "noDataTitle": "No Leave Data Available",
+      "noDataDescription": "Leave balances will appear here once employees start using the system.",
+      "breakdown": "Leave Type Breakdown",
       "vacation": "Vacation",
       "vacationDays": "20 days/year",
+      "vacationDaysPerYear": "20 days/year",
       "sickLeave": "Sick Leave",
       "sickLeaveDays": "10 days/year",
+      "sickLeaveDaysPerYear": "10 days/year",
       "personal": "Personal",
       "personalDays": "5 days/year",
+      "personalDaysPerYear": "5 days/year",
       "accrualRateLabel": "days/month • Expires",
       "expiresNever": "Never",
       "availableLabel": "available",
@@ -474,7 +480,9 @@
     "contractCompliance": "Contract Compliance",
     "trainingCompliance": "Training Compliance",
     "alertsByType": "Alerts by Type",
-    "allClear": "All Clear!"
+    "allClear": "All Clear!",
+    "generateAlerts": "Generate Alerts",
+    "noActiveAlerts": "No active compliance alerts at this time."
   },
   "benefits": {
     "title": "Benefits Administration",
