--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -193,12 +193,18 @@
       "used": "Usado",
       "noLeaveDataAvailable": "No Hay Datos de Ausencia Disponibles",
       "leaveBalancesWillAppear": "Los saldos de ausencias aparecerán aquí una vez que los empleados comiencen a usar el sistema.",
+      "noDataTitle": "No Hay Datos de Ausencia Disponibles",
+      "noDataDescription": "Los saldos de ausencias aparecerán aquí una vez que los empleados comiencen a usar el sistema.",
+      "breakdown": "Desglose por Tipo de Ausencia",
       "vacation": "Vacaciones",
       "vacationDays": "20 días/año",
+      "vacationDaysPerYear": "20 días/año",
       "sickLeave": "Licencia por Enfermedad",
       "sickLeaveDays": "10 días/año",
+      "sickLeaveDaysPerYear": "10 días/año",
       "personal": "Personal",
       "personalDays": "5 días/año",
+      "personalDaysPerYear": "5 días/año",
       "accrualRateLabel": "días/mes • Vence",
       "expiresNever": "Nunca",
       "availableLabel": "disponible",
@@ -434,7 +440,9 @@
     "contractCompliance": "Cumplimiento de Contratos",
     "trainingCompliance": "Cumplimiento de Capacitación",
     "alertsByType": "Alertas por Tipo",
-    "allClear": "¡Todo Despejado!"
+    "allClear": "¡Todo Despejado!",
+    "generateAlerts": "Generar Alertas",
+    "noActiveAlerts": "No hay alertas de cumplimiento activas en este momento."
   },
   "benefits": {
     "title": "Administración de Beneficios",
