--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -193,12 +193,18 @@
       "used": "Utilisé",
       "noLeaveDataAvailable": "Aucune Donnée de Congé Disponible",
       "leaveBalancesWillAppear": "Les soldes de congés apparaîtront ici une fois que les employés commenceront à utiliser le système.",
+      "noDataTitle": "Aucune Donnée de Congé Disponible",
+      "noDataDescription": "Les soldes de congés apparaîtront ici une fois que les employés commenceront à utiliser le système.",
+      "breakdown": "Répartition par Type de Congé",
       "vacation": "Vacances",
       "vacationDays": "20 jours/an",
+      "vacationDaysPerYear": "20 jours/an",
       "sickLeave": "Congé Maladie",
       "sickLeaveDays": "10 jours/an",
+      "sickLeaveDaysPerYear": "10 jours/an",
       "personal": "Personnel",
       "personalDays": "5 jours/an",
+      "personalDaysPerYear": "5 jours/an",
       "accrualRateLabel": "jours/mois • Expire",
       "expiresNever": "Jamais",
       "availableLabel": "disponible",
@@ -434,7 +440,9 @@
     "contractCompliance": "Conformité des Contrats",
     "trainingCompliance": "Conformité de la Formation",
     "alertsByType": "Alertes par Type",
-    "allClear": "Tout est en Ordre!"
+    "allClear": "Tout est en Ordre!",
+    "generateAlerts": "Générer des Alertes",
+    "noActiveAlerts": "Aucune alerte de conformité active pour le moment."
   },
   "benefits": {
     "title": "Administration des Avantages Sociaux",
