feat: add missing translations for Excel import, benefits, compliance, and leave management
- Add Excel Commission Import translations (title, format description, upload labels, period selection)
- Add Benefits page button translations (Enroll Employee, Add Plan)
- Add Compliance Generate Alerts translation
- Add Leave Management missing translations (calendar clickDayPrompt, balances noDataTitle/Description, analyticsTab upcoming)
- Update components to use translation keys instead of hardcoded strings
- Translations added for English, Spanish, and French

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -219,16 +219,12 @@
       "leaveBalancesWillAppear": "Leave balances will appear here once employees start using the system.",
       "noDataTitle": "No Leave Data Available",
       "noDataDescription": "Leave balances will appear here once employees start using the system.",
-      "breakdown": "Leave Type Breakdown",
       "vacation": "Vacation",
       "vacationDays": "20 days/year",
-      "vacationDaysPerYear": "20 days/year",
       "sickLeave": "Sick Leave",
       "sickLeaveDays": "10 days/year",
-      "sickLeaveDaysPerYear": "10 days/year",
       "personal": "Personal",
       "personalDays": "5 days/year",
-      "personalDaysPerYear": "5 days/year",
       "accrualRateLabel": "days/month • Expires",
       "expiresNever": "Never",
       "availableLabel": "available",
@@ -257,6 +253,7 @@
       "sat": "Sat",
       "selectDate": "Select a date",
       "clickToSee": "Click on a calendar day to see who's on leave",
+      "clickDayPrompt": "Click on a calendar day to see who's on leave",
       "noOneOnLeave": "No one is on leave this day",
       "more": "more",
       "legend": {
@@ -271,7 +268,8 @@
       "totalRequests": "Total Requests",
       "pendingCount": "Pending",
       "approvedCount": "Approved",
-      "upcomingCount": "Upcoming"
+      "upcomingCount": "Upcoming",
+      "upcoming": "Upcoming"
     },
     "policyManagement": {
       "title": "Leave Policy Management",
@@ -481,8 +479,7 @@
     "trainingCompliance": "Training Compliance",
     "alertsByType": "Alerts by Type",
     "allClear": "All Clear!",
-    "generateAlerts": "Generate Alerts",
-    "noActiveAlerts": "No active compliance alerts at this time."
+    "generateAlerts": "Generate Alerts"
   },
   "benefits": {
     "title": "Benefits Administration",
@@ -518,6 +515,7 @@
     "planLevel": "Plan Level",
     "coverageDetailsPlaceholder": "Describe the coverage details...",
     "enrollEmployee": "Enroll Employee in Benefits",
+    "enrollEmployeeButton": "+ Enroll Employee",
     "selectEmployee": "Select Employee",
     "benefitPlan": "Benefit Plan",
     "selectBenefit": "Select Benefit",
@@ -567,6 +565,7 @@
     "copayPlaceholder": "25",
     "monthlyPremiumPlaceholder": "600",
     "addPlan": "Add Plan",
+    "addPlanButton": "+ Add Plan",
     "updateEnrollment": "Update Enrollment",
     "matchRatePlaceholder": "e.g., 3% up to 6%",
     "contributionLimit": "Contribution Limit",
@@ -615,6 +614,16 @@
     "description": "Manage performance-based compensation and sales commissions",
     "uploadCommissionData": "Upload Commission Data",
     "excelImport": "Excel Import",
+    "excelCommissionImport": "Excel Commission Import",
+    "supportedFormat": "💡 Supported Format: Excel files (.xlsx, .xls) with commission data. The system will automatically detect Main Commission, Agent US, and Hourly Payout tables.",
+    "uploadExcelFile": "Upload Excel File",
+    "supportsFormats": "Supports .xlsx and .xls formats with multiple data tables",
+    "clickToUploadExcelFile": "Click to upload Excel file",
+    "periodMonthOptional": "Period Month (Optional)",
+    "autoDetectFromSheetName": "Auto-detect from sheet name",
+    "autoDetectHelper": "Leave as \"Auto-detect\" if your sheet is named like \"July 2025\". Otherwise, select from recent months.",
+    "clear": "Clear",
+    "importCommissionData": "Import Commission Data",
     "analytics": "Analytics",
     "noCommissionDataAvailable": "No commission data available",
     "importExcelDataToSeeAnalytics": "Import Excel data to see analytics",
