--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -195,16 +195,12 @@
       "leaveBalancesWillAppear": "Los saldos de ausencias aparecerán aquí una vez que los empleados comiencen a usar el sistema.",
       "noDataTitle": "No Hay Datos de Ausencia Disponibles",
       "noDataDescription": "Los saldos de ausencias aparecerán aquí una vez que los empleados comiencen a usar el sistema.",
-      "breakdown": "Desglose por Tipo de Ausencia",
       "vacation": "Vacaciones",
       "vacationDays": "20 días/año",
-      "vacationDaysPerYear": "20 días/año",
       "sickLeave": "Licencia por Enfermedad",
       "sickLeaveDays": "10 días/año",
-      "sickLeaveDaysPerYear": "10 días/año",
       "personal": "Personal",
       "personalDays": "5 días/año",
-      "personalDaysPerYear": "5 días/año",
       "accrualRateLabel": "días/mes • Vence",
       "expiresNever": "Nunca",
       "availableLabel": "disponible",
@@ -233,6 +229,7 @@
       "sat": "Sáb",
       "selectDate": "Seleccionar una fecha",
       "clickToSee": "Haga clic en un día del calendario para ver quién está de ausencia",
+      "clickDayPrompt": "Haga clic en un día del calendario para ver quién está de ausencia",
       "noOneOnLeave": "Nadie está de ausencia este día",
       "more": "más",
       "legend": {
@@ -247,7 +244,8 @@
       "totalRequests": "Solicitudes Totales",
       "pendingCount": "Pendientes",
       "approvedCount": "Aprobadas",
-      "upcomingCount": "Próximas"
+      "upcomingCount": "Próximas",
+      "upcoming": "Próximas"
     },
     "policyManagement": {
       "title": "Gestión de Políticas de Ausencias",
@@ -441,8 +439,7 @@
     "trainingCompliance": "Cumplimiento de Capacitación",
     "alertsByType": "Alertas por Tipo",
     "allClear": "¡Todo Despejado!",
-    "generateAlerts": "Generar Alertas",
-    "noActiveAlerts": "No hay alertas de cumplimiento activas en este momento."
+    "generateAlerts": "Generar Alertas"
   },
   "benefits": {
     "title": "Administración de Beneficios",
@@ -490,6 +487,9 @@
     "copayPlaceholder": "25",
     "monthlyPremiumPlaceholder": "600",
     "addPlan": "Agregar Plan",
+    "addPlanButton": "+ Agregar Plan",
+    "enrollEmployee": "Inscribir Empleado en Beneficios",
+    "enrollEmployeeButton": "+ Inscribir Empleado",
     "updateEnrollment": "Actualizar Inscripción",
     "matchRatePlaceholder": "ej., 3% hasta 6%",
     "contributionLimit": "Límite de Contribución",
@@ -538,6 +538,16 @@
     "description": "Gestionar compensación basada en desempeño y comisiones de ventas",
     "uploadCommissionData": "Subir Datos de Comisiones",
     "excelImport": "Importar Excel",
+    "excelCommissionImport": "Importación de Comisiones Excel",
+    "supportedFormat": "💡 Formato Soportado: Archivos Excel (.xlsx, .xls) con datos de comisiones. El sistema detectará automáticamente las tablas de Comisión Principal, Agentes US y Pagos por Hora.",
+    "uploadExcelFile": "Subir Archivo Excel",
+    "supportsFormats": "Soporta formatos .xlsx y .xls con múltiples tablas de datos",
+    "clickToUploadExcelFile": "Haga clic para subir archivo Excel",
+    "periodMonthOptional": "Mes del Período (Opcional)",
+    "autoDetectFromSheetName": "Auto-detectar desde el nombre de la hoja",
+    "autoDetectHelper": "Deje como \"Auto-detectar\" si su hoja se llama como \"Julio 2025\". De lo contrario, seleccione de los meses recientes.",
+    "clear": "Limpiar",
+    "importCommissionData": "Importar Datos de Comisiones",
     "analytics": "Analíticas",
     "noCommissionDataAvailable": "No hay datos de comisiones disponibles",
     "importExcelDataToSeeAnalytics": "Importe datos de Excel para ver analíticas",
