--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -195,16 +195,12 @@
       "leaveBalancesWillAppear": "Les soldes de congés apparaîtront ici une fois que les employés commenceront à utiliser le système.",
       "noDataTitle": "Aucune Donnée de Congé Disponible",
       "noDataDescription": "Les soldes de congés apparaîtront ici une fois que les employés commenceront à utiliser le système.",
-      "breakdown": "Répartition par Type de Congé",
       "vacation": "Vacances",
       "vacationDays": "20 jours/an",
-      "vacationDaysPerYear": "20 jours/an",
       "sickLeave": "Congé Maladie",
       "sickLeaveDays": "10 jours/an",
-      "sickLeaveDaysPerYear": "10 jours/an",
       "personal": "Personnel",
       "personalDays": "5 jours/an",
-      "personalDaysPerYear": "5 jours/an",
       "accrualRateLabel": "jours/mois • Expire",
       "expiresNever": "Jamais",
       "availableLabel": "disponible",
@@ -233,6 +229,7 @@
       "sat": "Sam",
       "selectDate": "Sélectionner une date",
       "clickToSee": "Cliquez sur un jour du calendrier pour voir qui est en congé",
+      "clickDayPrompt": "Cliquez sur un jour du calendrier pour voir qui est en congé",
       "noOneOnLeave": "Personne n'est en congé ce jour",
       "more": "plus",
       "legend": {
@@ -247,7 +244,8 @@
       "totalRequests": "Demandes Totales",
       "pendingCount": "En Attente",
       "approvedCount": "Approuvées",
-      "upcomingCount": "À Venir"
+      "upcomingCount": "À Venir",
+      "upcoming": "À Venir"
     },
     "policyManagement": {
       "title": "Gestion des Politiques de Congés",
@@ -441,8 +439,7 @@
     "trainingCompliance": "Conformité de la Formation",
     "alertsByType": "Alertes par Type",
     "allClear": "Tout est en Ordre!",
-    "generateAlerts": "Générer des Alertes",
-    "noActiveAlerts": "Aucune alerte de conformité active pour le moment."
+    "generateAlerts": "Générer des Alertes"
   },
   "benefits": {
     "title": "Administration des Avantages Sociaux",
@@ -490,6 +487,9 @@
     "copayPlaceholder": "25",
     "monthlyPremiumPlaceholder": "600",
     "addPlan": "Ajouter un Plan",
+    "addPlanButton": "+ Ajouter un Plan",
+    "enrollEmployee": "Inscrire un Employé aux Avantages",
+    "enrollEmployeeButton": "+ Inscrire un Employé",
     "updateEnrollment": "Mettre à Jour l'Inscription",
     "matchRatePlaceholder": "ex., 3% jusqu'à 6%",
     "contributionLimit": "Limite de Contribution",
@@ -538,6 +538,16 @@
     "description": "Gérer la rémunération basée sur la performance et les commissions de vente",
     "uploadCommissionData": "Télécharger les Données de Commission",
     "excelImport": "Importer Excel",
+    "excelCommissionImport": "Importation de Commissions Excel",
+    "supportedFormat": "💡 Format Pris en Charge: Fichiers Excel (.xlsx, .xls) avec données de commissions. Le système détectera automatiquement les tableaux de Commission Principale, Agents US et Paiements Horaire.",
+    "uploadExcelFile": "Télécharger un Fichier Excel",
+    "supportsFormats": "Prend en charge les formats .xlsx et .xls avec plusieurs tableaux de données",
+    "clickToUploadExcelFile": "Cliquez pour télécharger un fichier Excel",
+    "periodMonthOptional": "Mois de la Période (Optionnel)",
+    "autoDetectFromSheetName": "Détection automatique depuis le nom de la feuille",
+    "autoDetectHelper": "Laissez \"Détection automatique\" si votre feuille s'appelle comme \"Juillet 2025\". Sinon, sélectionnez parmi les mois récents.",
+    "clear": "Effacer",
+    "importCommissionData": "Importer les Données de Commission",
     "analytics": "Analytiques",
     "noCommissionDataAvailable": "Aucune donnée de commission disponible",
     "importExcelDataToSeeAnalytics": "Importez des données Excel pour voir les analytiques",
