feat: Add department management in Settings
- Add department CRUD endpoints (POST/DELETE) with manager/admin auth
- Add department management UI in System Settings tab
- Seed 6 standard departments: Sales, Operations, Finance, IT, Marketing, HR
- Remove hardcoded departments from BonusesCommissions
- Add translations for department management (EN/ES/FR)
- Prevent deletion of departments with assigned employees

--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -660,6 +660,26 @@
     "noSettingsAvailable": "No hay configuración disponible",
     "settingsWillAppearHere": "La configuración aparecerá aquí cuando esté disponible",
     "noSystemSettings": "No hay configuración del sistema disponible",
+    "departments": {
+      "title": "Gestión de Departamentos",
+      "description": "Gestionar departamentos en su organización. Los gerentes pueden agregar o eliminar departamentos.",
+      "addNew": "Agregar Nuevo Departamento",
+      "add": "Agregar",
+      "adding": "Agregando...",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Departamentos",
+      "namePlaceholder": "Ingrese el nombre del departamento",
+      "nameRequired": "El nombre del departamento es requerido",
+      "addError": "Error al agregar departamento",
+      "deleteError": "Error al eliminar departamento",
+      "confirmDelete": "¿Está seguro de que desea eliminar este departamento?",
+      "noDepartments": "No se encontraron departamentos",
+      "noEmployees": "No hay empleados asignados",
+      "employeeCount": "{{count}} empleado(s)",
+      "employeesAssigned": "Este departamento tiene empleados asignados",
+      "cannotDelete": "No se puede eliminar departamento con empleados asignados"
+    },
     "failedToRevokeDevice": "Error al revocar dispositivo",
     "failedToRevokeDevices": "Error al revocar dispositivos",
     "deviceRevokedSuccess": "✅ Dispositivo revocado exitosamente",
