--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -660,6 +660,26 @@
     "noSettingsAvailable": "Aucun paramètre disponible",
     "settingsWillAppearHere": "Les paramètres apparaîtront ici lorsqu'ils seront disponibles",
     "noSystemSettings": "Aucun paramètre système disponible",
+    "departments": {
+      "title": "Gestion des Départements",
+      "description": "Gérer les départements de votre organisation. Les gestionnaires peuvent ajouter ou supprimer des départements.",
+      "addNew": "Ajouter un Nouveau Département",
+      "add": "Ajouter",
+      "adding": "Ajout en cours...",
+      "delete": "Supprimer",
+      "deleting": "Suppression en cours...",
+      "list": "Départements",
+      "namePlaceholder": "Entrez le nom du département",
+      "nameRequired": "Le nom du département est requis",
+      "addError": "Échec de l'ajout du département",
+      "deleteError": "Échec de la suppression du département",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce département?",
+      "noDepartments": "Aucun département trouvé",
+      "noEmployees": "Aucun employé assigné",
+      "employeeCount": "{{count}} employé(s)",
+      "employeesAssigned": "Ce département a des employés assignés",
+      "cannotDelete": "Impossible de supprimer le département avec des employés assignés"
+    },
     "failedToRevokeDevice": "Échec de la révocation de l'appareil",
     "failedToRevokeDevices": "Échec de la révocation des appareils",
     "deviceRevokedSuccess": "✅ Appareil révoqué avec succès",
