--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -736,6 +736,26 @@
     "noSettingsAvailable": "No settings available",
     "settingsWillAppearHere": "Settings will appear here when available",
     "noSystemSettings": "No system settings available",
+    "departments": {
+      "title": "Department Management",
+      "description": "Manage departments in your organization. Managers can add or remove departments.",
+      "addNew": "Add New Department",
+      "add": "Add",
+      "adding": "Adding...",
+      "delete": "Delete",
+      "deleting": "Delete...",
+      "list": "Departments",
+      "namePlaceholder": "Enter department name",
+      "nameRequired": "Department name is required",
+      "addError": "Failed to add department",
+      "deleteError": "Failed to delete department",
+      "confirmDelete": "Are you sure you want to delete this department?",
+      "noDepartments": "No departments found",
+      "noEmployees": "No employees assigned",
+      "employeeCount": "{{count}} employee(s)",
+      "employeesAssigned": "This department has employees assigned",
+      "cannotDelete": "Cannot delete department with assigned employees"
+    },
     "failedToRevokeDevice": "Failed to revoke device",
     "failedToRevokeDevices": "Failed to revoke devices",
     "deviceRevokedSuccess": "✅ Device revoked successfully",
