feat: Add Leave Policies and Holidays management in Settings
- Add CRUD endpoints for leave types (GET/POST/PUT/DELETE) with manager/admin auth
- Add CRUD endpoints for holidays (GET/POST/DELETE) with manager/admin auth
- Update calendar endpoint to return both leave requests and holidays with type field
- Add Leave Policies management UI in System Settings tab
- Add Holidays management UI in System Settings tab
- Update Leave Management to use dynamic leave types from API
- Update Leave Management calendar to display holidays with distinct styling
- Add translations for leave policies and holidays (EN/ES/FR)
- Prevent deletion of leave types if used in leave requests
- Show usage counts for leave types
- Holidays appear in calendar with yellow background and emoji indicator

--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -232,6 +232,9 @@
       "clickDayPrompt": "Haga clic en un día del calendario para ver quién está de ausencia",
       "noOneOnLeave": "Nadie está de ausencia este día",
       "more": "más",
+      "holidays": "Días Festivos",
+      "leaveRequests": "Solicitudes de Ausencia",
+      "companyClosure": "Cierre de la Empresa",
       "legend": {
         "vacation": "Vacaciones",
         "sickLeave": "Licencia por Enfermedad",
@@ -679,6 +682,60 @@
       "employeeCount": "{{count}} empleado(s)",
       "employeesAssigned": "Este departamento tiene empleados asignados",
       "cannotDelete": "No se puede eliminar departamento con empleados asignados"
+    },
+    "leavePolicies": {
+      "title": "Políticas de Licencias",
+      "description": "Gestionar tipos de licencias y sus políticas. Los cambios afectan a todos los usuarios.",
+      "addNew": "Agregar Nuevo Tipo de Licencia",
+      "edit": "Editar Tipo de Licencia",
+      "add": "Agregar",
+      "update": "Actualizar",
+      "saving": "Guardando...",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "cancel": "Cancelar",
+      "list": "Tipos de Licencias",
+      "name": "Nombre",
+      "namePlaceholder": "ej., Vacaciones, Licencia por Enfermedad",
+      "nameRequired": "El nombre del tipo de licencia es requerido",
+      "description": "Descripción",
+      "descriptionPlaceholder": "Descripción opcional",
+      "annualEntitlement": "Derecho Anual por Defecto (días)",
+      "isPaid": "Es Pagado",
+      "requiresApproval": "Requiere Aprobación",
+      "color": "Color",
+      "daysPerYear": "días/año",
+      "paid": "Pagado",
+      "unpaid": "No Pagado",
+      "approvalRequired": "Aprobación Requerida",
+      "noApproval": "Sin Aprobación Requerida",
+      "addError": "Error al agregar tipo de licencia",
+      "updateError": "Error al actualizar tipo de licencia",
+      "deleteError": "Error al eliminar tipo de licencia",
+      "confirmDelete": "¿Está seguro de que desea eliminar este tipo de licencia?",
+      "noLeaveTypes": "No se encontraron tipos de licencias",
+      "inUse": "Usado en {{count}} solicitud(es) de licencia",
+      "cannotDelete": "No se puede eliminar tipo de licencia que está en uso"
+    },
+    "holidays": {
+      "title": "Días Festivos y Calendario de la Empresa",
+      "description": "Gestionar días festivos de la empresa. Estos aparecerán en el calendario de Gestión de Licencias.",
+      "addNew": "Agregar Nuevo Día Festivo",
+      "add": "Agregar",
+      "adding": "Agregando...",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Días Festivos",
+      "date": "Fecha",
+      "description": "Descripción",
+      "descriptionPlaceholder": "ej., Año Nuevo, Navidad",
+      "companyClosure": "Cierre de la Empresa",
+      "dateAndDescriptionRequired": "La fecha y descripción son requeridas",
+      "addError": "Error al agregar día festivo",
+      "deleteError": "Error al eliminar día festivo",
+      "confirmDelete": "¿Está seguro de que desea eliminar este día festivo?",
+      "noHolidays": "No se encontraron días festivos",
+      "upcoming": "Próximo"
     },
     "failedToRevokeDevice": "Error al revocar dispositivo",
     "failedToRevokeDevices": "Error al revocar dispositivos",
