--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -232,6 +232,9 @@
       "clickDayPrompt": "Cliquez sur un jour du calendrier pour voir qui est en congé",
       "noOneOnLeave": "Personne n'est en congé ce jour",
       "more": "plus",
+      "holidays": "Jours Fériés",
+      "leaveRequests": "Demandes de Congé",
+      "companyClosure": "Fermeture de l'Entreprise",
       "legend": {
         "vacation": "Vacances",
         "sickLeave": "Congé Maladie",
@@ -679,6 +682,60 @@
       "employeeCount": "{{count}} employé(s)",
       "employeesAssigned": "Ce département a des employés assignés",
       "cannotDelete": "Impossible de supprimer le département avec des employés assignés"
+    },
+    "leavePolicies": {
+      "title": "Politiques de Congés",
+      "description": "Gérer les types de congés et leurs politiques. Les modifications affectent tous les utilisateurs.",
+      "addNew": "Ajouter un Nouveau Type de Congé",
+      "edit": "Modifier le Type de Congé",
+      "add": "Ajouter",
+      "update": "Mettre à jour",
+      "saving": "Enregistrement...",
+      "delete": "Supprimer",
+      "deleting": "Suppression...",
+      "cancel": "Annuler",
+      "list": "Types de Congés",
+      "name": "Nom",
+      "namePlaceholder": "ex., Vacances, Congé Maladie",
+      "nameRequired": "Le nom du type de congé est requis",
+      "description": "Description",
+      "descriptionPlaceholder": "Description optionnelle",
+      "annualEntitlement": "Droit Annuel par Défaut (jours)",
+      "isPaid": "Est Payé",
+      "requiresApproval": "Nécessite une Approbation",
+      "color": "Couleur",
+      "daysPerYear": "jours/an",
+      "paid": "Payé",
+      "unpaid": "Non Payé",
+      "approvalRequired": "Approbation Requise",
+      "noApproval": "Aucune Approbation Requise",
+      "addError": "Échec de l'ajout du type de congé",
+      "updateError": "Échec de la mise à jour du type de congé",
+      "deleteError": "Échec de la suppression du type de congé",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce type de congé?",
+      "noLeaveTypes": "Aucun type de congé trouvé",
+      "inUse": "Utilisé dans {{count}} demande(s) de congé",
+      "cannotDelete": "Impossible de supprimer le type de congé qui est utilisé"
+    },
+    "holidays": {
+      "title": "Jours Fériés et Calendrier de l'Entreprise",
+      "description": "Gérer les jours fériés de l'entreprise. Ils apparaîtront dans le calendrier de Gestion des Congés.",
+      "addNew": "Ajouter un Nouveau Jour Férié",
+      "add": "Ajouter",
+      "adding": "Ajout en cours...",
+      "delete": "Supprimer",
+      "deleting": "Suppression en cours...",
+      "list": "Jours Fériés",
+      "date": "Date",
+      "description": "Description",
+      "descriptionPlaceholder": "ex., Jour de l'An, Noël",
+      "companyClosure": "Fermeture de l'Entreprise",
+      "dateAndDescriptionRequired": "La date et la description sont requises",
+      "addError": "Échec de l'ajout du jour férié",
+      "deleteError": "Échec de la suppression du jour férié",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce jour férié?",
+      "noHolidays": "Aucun jour férié trouvé",
+      "upcoming": "À venir"
     },
     "failedToRevokeDevice": "Échec de la révocation de l'appareil",
     "failedToRevokeDevices": "Échec de la révocation des appareils",
