--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -253,6 +253,9 @@
       "sat": "Sat",
       "selectDate": "Select a date",
       "clickToSee": "Click on a calendar day to see who's on leave",
+      "holidays": "Holidays",
+      "leaveRequests": "Leave Requests",
+      "companyClosure": "Company Closure",
       "clickDayPrompt": "Click on a calendar day to see who's on leave",
       "noOneOnLeave": "No one is on leave this day",
       "more": "more",
@@ -755,6 +758,60 @@
       "employeeCount": "{{count}} employee(s)",
       "employeesAssigned": "This department has employees assigned",
       "cannotDelete": "Cannot delete department with assigned employees"
+    },
+    "leavePolicies": {
+      "title": "Leave Policies",
+      "description": "Manage leave types and their policies. Changes affect all users.",
+      "addNew": "Add New Leave Type",
+      "edit": "Edit Leave Type",
+      "add": "Add",
+      "update": "Update",
+      "saving": "Saving...",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "cancel": "Cancel",
+      "list": "Leave Types",
+      "name": "Name",
+      "namePlaceholder": "e.g., Vacation, Sick Leave",
+      "nameRequired": "Leave type name is required",
+      "description": "Description",
+      "descriptionPlaceholder": "Optional description",
+      "annualEntitlement": "Default Annual Entitlement (days)",
+      "isPaid": "Is Paid",
+      "requiresApproval": "Requires Approval",
+      "color": "Color",
+      "daysPerYear": "days/year",
+      "paid": "Paid",
+      "unpaid": "Unpaid",
+      "approvalRequired": "Approval Required",
+      "noApproval": "No Approval Required",
+      "addError": "Failed to add leave type",
+      "updateError": "Failed to update leave type",
+      "deleteError": "Failed to delete leave type",
+      "confirmDelete": "Are you sure you want to delete this leave type?",
+      "noLeaveTypes": "No leave types found",
+      "inUse": "Used in {{count}} leave request(s)",
+      "cannotDelete": "Cannot delete leave type that is in use"
+    },
+    "holidays": {
+      "title": "Holidays & Company Calendar",
+      "description": "Manage company holidays. These will appear in the Leave Management calendar.",
+      "addNew": "Add New Holiday",
+      "add": "Add",
+      "adding": "Adding...",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Holidays",
+      "date": "Date",
+      "description": "Description",
+      "descriptionPlaceholder": "e.g., New Year's Day, Christmas",
+      "companyClosure": "Company Closure",
+      "dateAndDescriptionRequired": "Date and description are required",
+      "addError": "Failed to add holiday",
+      "deleteError": "Failed to delete holiday",
+      "confirmDelete": "Are you sure you want to delete this holiday?",
+      "noHolidays": "No holidays found",
+      "upcoming": "Upcoming"
     },
     "failedToRevokeDevice": "Failed to revoke device",
     "failedToRevokeDevices": "Failed to revoke devices",
